<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_calculation"
            android:key="pref_key_calculation">
        <EditTextPreference
                android:key="pref_key_ideal_score"
                android:summary="@string/pref_ideal_score_summary"
                android:title="@string/pref_ideal_score_title"
                android:inputType="number"
                android:maxLength="3"
                android:defaultValue="100.0f"/>
        <EditTextPreference
                android:key="pref_key_req_per"
                android:summary="@string/pref_req_per_summary"
                android:title="@string/pref_req_per_title"
                android:inputType="number"
                android:maxLength="3"
                android:defaultValue="70.0f"/>
        <EditTextPreference
                android:key="pref_key_max_approb"
                android:summary="@string/pref_max_approb_summary"
                android:title="@string/pref_max_approb_title"
                android:inputType="number"
                android:maxLength="3"
                android:defaultValue="10.0f"/>
        <EditTextPreference
                android:key="pref_key_min_approb"
                android:summary="@string/pref_min_approb_summary"
                android:title="@string/pref_min_approb_title"
                android:inputType="number"
                android:maxLength="3"
                android:defaultValue="4.0f"/>
        <EditTextPreference
                android:key="pref_key_n_dec"
                android:summary="@string/pref_n_dec_summary"
                android:title="@string/pref_n_dec_title"
                android:inputType="number"
                android:maxLength="1"
                android:defaultValue="2"/>
    </PreferenceCategory>
</PreferenceScreen>
