<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/clear_button"
          android:icon="@drawable/content_discard"
          android:title="@string/clear_button_text"
          android:showAsAction="always"/>
    <item android:id="@+id/settings_button"
          android:title="@string/settings_button_text"
          android:icon="@drawable/action_settings"

          android:showAsAction="ifRoom"/>
    <item android:id="@+id/about_button"
          android:icon="@drawable/action_about"
          android:title="@string/about_button_text"
          android:showAsAction="never|withText"/>
    <item android:id="@+id/close_button"
          android:icon="@drawable/navigation_cancel"
          android:title="@string/close_button_text"
          android:showAsAction="never|withText"/>
</menu>